src/test/deca/syntax/invalid/homemade/invalid_print_synt.res
src/test/deca/syntax/invalid/homemade/invalid_print.deca:10:16: missing ')' at ';'
